# bluebrixx2telegram

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Readme.md  SECURITY.md  dockerfile  pyproject.toml  tox.ini
.github/workflows/: docker-image.yml  tox.yml
src/: bluebrixx.py  bluebrixx2telegram.py  bluebrixx2text.py
src/bluebrixx/: __init__.py  bluebrixx.py
src/telegram/: telegram.py
tests/: test_bluebrixx.py
